<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOver">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="130dp"
        android:src="@drawable/sad_man"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintVertical_bias="0.4"/>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="130dp"
        android:src="@drawable/sad_man"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        style="@style/text"
        android:id="@+id/gameOverTitle"
        android:text="@string/you_murdered_him"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/red"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/disappointed"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        style="@style/text"
        android:id="@+id/disappointed"
        android:text="@string/disappointed"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameOverTitle"
        app:layout_constraintBottom_toTopOf="@id/button_tryAgain" />

    <com.google.android.material.button.MaterialButton
        style="@style/button"
        android:id="@+id/button_tryAgain"
        android:text="@string/try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/disappointed"
        app:layout_constraintBottom_toTopOf="@id/button_changeDifficulty" />

    <com.google.android.material.button.MaterialButton
        style="@style/button"
        android:id="@+id/button_changeDifficulty"
        android:text="@string/change_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_tryAgain"
        app:layout_constraintBottom_toTopOf="@id/button_home"/>

    <com.google.android.material.button.MaterialButton
        style="@style/button"
        android:id="@+id/button_home"
        android:text="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_changeDifficulty"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>