<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseDifficulty">

    <TextView
        style="@style/text"
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty"
        android:textSize="40sp"
        android:textColor="#222"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.25"/>

    <TextView
        style="@style/text"
        android:id="@+id/text_mean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mean"
        android:textSize="25sp"
        android:textColor="#222"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/slider_mean"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.6"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_mean"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:value="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mean"
        app:layout_constraintBottom_toTopOf="@id/text_standardDeviation" />

    <TextView
        style="@style/text"
        android:id="@+id/text_standardDeviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_deviation"
        android:textSize="25sp"
        android:textColor="#222"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_mean"
        app:layout_constraintBottom_toTopOf="@id/slider_standardDeviation" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_standardDeviation"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:value="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_standardDeviation"
        app:layout_constraintBottom_toTopOf="@id/button_saveTheMan" />

    <com.google.android.material.button.MaterialButton
        style="@style/button"
        android:id="@+id/button_saveTheMan"
        android:text="@string/save_the_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_standardDeviation"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>